Added Girard Linear Logic

--- a/tex/main.bib
+++ b/tex/main.bib
@@ -58,6 +58,16 @@
   url             = {https://www.infoq.com/presentations/Null-References-The-Billion-Dollar-Mistake-Tony-Hoare/},
 }
 
+@incollection{key,
+  author         = {Jean{-}Yves Girard},
+  title          = {Linear Logic},
+  booktitle      = {Theoretical Computer Science},
+  volume         = {50},
+  pages          = {1-102},
+  year           = {1987},
+  url            = {http://girard.perso.math.cnrs.fr/linear.pdf},
+}
+
 @incollection{walker:linear_logic,
   author         = {David Walker},
   title          = {Substructural Type Systems},
