Added Girard Linear Logic

--- a/tex/main.bib
+++ b/tex/main.bib
@@ -58,7 +58,7 @@
   url             = {https://www.infoq.com/presentations/Null-References-The-Billion-Dollar-Mistake-Tony-Hoare/},
 }
 
-@incollection{key,
+@incollection{girard:linear_logic,
   author         = {Jean{-}Yves Girard},
   title          = {Linear Logic},
   booktitle      = {Theoretical Computer Science},
